--- a/src/app/main/index.css
+++ b/src/app/main/index.css
@@ -1,5 +1,10 @@
-/** @format */
-
+html::-webkit-scrollbar {
+	display: none;
+}
+html {
+	-ms-overflow-style: none;
+	scrollbar-width: none;
+}
 :root {
 	font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 	line-height: 1.5;
@@ -18,7 +23,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: flex-start;
-	overflow: auto;
+	overflow: visible;
 }
 
 body {
